Adjust to java 1.8.